Day5/python-with-mysql/flask-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-app
  name: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: image-registry.openshift-image-registry.svc:5000/openshift/flask-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
