Day5/python-with-mysql/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc-jegan  #Replace 'jegan' with your name
      containers:
      - name: mysql
        image: image-registry.openshift-image-registry.svc:5000/openshift/mariadb:1.0
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: mysql-storage
          mountPath: /bitnami/mariadb/data
