Day5/python-with-mysql/flask-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-app
  name: flask-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080

  selector:
    app: flask-app

  type: ClusterIP
