Day5/python-with-mysql/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306

  selector:
    app: mysql

  type: ClusterIP
