Day5/python-with-mysql/flask-app-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flask-app
  name: flask-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: flask-app
    weight: 100
